add performance test for modifying row by row, not in one query

--- a/tests/integration/functional/sql_fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/sql_fork_extension/CMakeLists.txt
@@ -61,3 +61,6 @@ ADD_SQL_FUNCTIONAL_TESTS( performance_update_rows_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( performance_back_from_update_rows_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( performance_truncate_rows_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( performance_back_from_truncate_rows_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( performance_insert_rows_one_by_one_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( performance_delete_rows_one_by_one_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( performance_update_rows_one_by_one_test.sql )
