--- a/tests/integration/functional/fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/fork_extension/CMakeLists.txt
@@ -29,3 +29,6 @@ ADD_FUNCTIONAL_TESTS( performance_back_from_delete_rows_test.sql )
 ADD_FUNCTIONAL_TESTS( performance_update_rows_test.sql )
 ADD_FUNCTIONAL_TESTS( performance_back_from_update_rows_test.sql )
 ADD_FUNCTIONAL_TESTS( performance_back_from_truncate_rows_test.sql )
+ADD_FUNCTIONAL_TESTS( performance_insert_rows_one_by_one_test.sql )
+ADD_FUNCTIONAL_TESTS( performance_delete_rows_one_by_one_test.sql )
+ADD_FUNCTIONAL_TESTS( performance_update_rows_one_by_one_test.sql )
