block edition of structure registered tables

--- a/tests/integration/functional/sql_fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/sql_fork_extension/CMakeLists.txt
@@ -14,6 +14,7 @@ ADD_SQL_FUNCTIONAL_TESTS( schema_test.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( register_table_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( register_not_empty_table_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( register_table_edit_test.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( create_context_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( context_next_block_test.sql )
