--- a/tests/integration/functional/sql_fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/sql_fork_extension/CMakeLists.txt
@@ -16,6 +16,8 @@ ADD_SQL_FUNCTIONAL_TESTS( register_table_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( register_not_empty_table_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( register_table_edit_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( register_table_drop_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( unregister_table_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( unregister_negative_table_test.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( create_context_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( context_next_block_test.sql )
