--- a/tests/integration/functional/sql_fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/sql_fork_extension/CMakeLists.txt
@@ -18,6 +18,7 @@ ADD_SQL_FUNCTIONAL_TESTS( register_table_edit_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( register_table_drop_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( unregister_table_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( unregister_negative_table_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( drop_registered_table_test.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( create_context_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( context_next_block_test.sql )
