attach table and rework detach

--- a/tests/integration/functional/sql_fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/sql_fork_extension/CMakeLists.txt
@@ -17,8 +17,10 @@ ADD_SQL_FUNCTIONAL_TESTS( register_table_edit_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( register_table_edit_negative_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( register_table_drop_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( detach_table_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( attach_table_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( detach_negative_unregistered_table_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( detach_negative_not_empty_shadow_table_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( attach_negative_unregistered_table_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( drop_registered_table_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( register_table_no_context_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( register_table_public_schema_test.sql )
