add docker to tests

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -1,5 +1,8 @@
 ADD_SUBDIRECTORY( googletest )
 
+INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/tests/unit/googletest/googlemock/include )
+INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/tests/unit/googletest/googletest/include )
+
 ADD_SUBDIRECTORY( mockups )
 
 ADD_SUBDIRECTORY( psql_utils )
