block removing hive_rowid column

--- a/tests/integration/functional/sql_fork_extension/CMakeLists.txt
+++ b/tests/integration/functional/sql_fork_extension/CMakeLists.txt
@@ -15,6 +15,7 @@ ADD_SQL_FUNCTIONAL_TESTS( schema_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( register_table_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( register_table_edit_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( register_table_edit_negative_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( register_table_edit_negative_rowid_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( register_table_drop_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( detach_table_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( attach_table_test.sql )
