--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,4 @@
 ADD_SUBDIRECTORY( psql_utils )
 ADD_SUBDIRECTORY( pq_utils )
 ADD_SUBDIRECTORY( fork_extension )
+ADD_SUBDIRECTORY( sql_fork_extension )
