gtest with externalproject_add

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,12 @@ CMAKE_MINIMUM_REQUIRED( VERSION 3.2 )
 PROJECT( psql_tools )
 
 SET( CMAKE_POSITION_INDEPENDENT_CODE ON )
+SET( CMAKE_SKIP_INSTALL_ALL_DEPENDENCY TRUE )
+
+include( ExternalProject )
 
 SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake )
+
 INCLUDE( compiler )
 INCLUDE( git )
 INCLUDE( libraries )
