--- a/src/fork_extension/CMakeLists.txt
+++ b/src/fork_extension/CMakeLists.txt
@@ -3,4 +3,4 @@ SET( target_name fork_extension )
 ADD_RUNTIME_LOADED_LIB( ${target_name} )
 TARGET_LINK_LIBRARIES( ${target_name} PRIVATE pq_utils psql_utils )
 
-INSTALL( TARGETS ${target_name} DESTINATION ${POSTGRES_LIBDIR}/plugins )
+INSTALL( TARGETS ${target_name} DESTINATION ${POSTGRES_LIBDIR}/plugins OPTIONAL )
