full suport to build psql extensions from sql files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ INCLUDE( compiler )
 INCLUDE( git )
 INCLUDE( libraries )
 INCLUDE( postgres )
+INCLUDE ( sql_extension )
 INCLUDE( targets )
 INCLUDE( tests )
 
