sql_fork_extension->hive_fork

--- a/Dockerfile.postgres13
+++ b/Dockerfile.postgres13
@@ -40,5 +40,5 @@ USER postgres
 RUN  /etc/init.d/postgresql start \
     && psql --command "CREATE USER root WITH SUPERUSER CREATEDB;" \
     && cd build \
-    && ctest -R test.functional.sql_fork_extension.*
+    && ctest -R test.functional.hive_fork.*
 
