--- a/tests/integration/functional/hive_fork/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork/CMakeLists.txt
@@ -1,7 +1,7 @@
 MACRO( ADD_SQL_FUNCTIONAL_TESTS sql_test_path)
     STRING( REGEX MATCH "^(.*)\\.[^.]*$" dummy ${sql_test_path} ) # remove sql extension
     SET( test_name ${CMAKE_MATCH_1})
-    SET( test_target test.functional.sql_fork_extension.${test_name} )
+    SET( test_target test.functional.hive_fork.${test_name} )
     SET( sources_under_tests_path ${CMAKE_SOURCE_DIR}/src/sql_fork_extension )
     ADD_TEST( NAME ${test_target}
             COMMAND test.sh ${sources_under_tests_path} ${sql_test_path}
