--- a/tests/integration/functional/hive_fork/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork/CMakeLists.txt
@@ -70,6 +70,9 @@ ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_complex_type_update_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_complex_type_insert_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_complex_type_delete_test.sql )
 
+ADD_SQL_FUNCTIONAL_TESTS( set_irreversible_block_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( set_irreversible_block_negative_test.sql )
+
 ADD_SQL_FUNCTIONAL_TESTS( performance_insert_rows_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( performance_back_from_insert_rows_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( performance_delete_rows_test.sql )
