--- a/tests/integration/functional/hive_fork/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork/CMakeLists.txt
@@ -63,6 +63,8 @@ ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_3_tables_truncate_test.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_2_tables_schemas_insert_test.sql )
 
+ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_2_contexts_test.sql )
+
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_constraint_fk_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_constraint_unique_test.sql )
 
