move context rewind tests to separated folder

--- a/tests/integration/functional/hive_fork/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork/CMakeLists.txt
@@ -1,6 +1,9 @@
 MACRO( ADD_SQL_FUNCTIONAL_TESTS sql_test_path)
-    STRING( REGEX MATCH "^(.*)\\.[^.]*$" dummy ${sql_test_path} ) # remove sql extension
-    SET( test_name ${CMAKE_MATCH_1})
+    STRING( REGEX MATCH "^(([^\\/]*)\\/)?(.*)\\.[^.]*$" dummy ${sql_test_path} ) # remove sql extension
+    SET( test_name ${CMAKE_MATCH_3})
+    IF( CMAKE_MATCH_2 )
+        SET( test_name ${CMAKE_MATCH_2}.${test_name} )
+    ENDIF()
     SET( test_target test.functional.hive_fork.${test_name} )
     SET( sources_under_tests_path ${CMAKE_SOURCE_DIR}/src/sql_fork_extension )
     ADD_TEST( NAME ${test_target}
@@ -10,80 +13,80 @@ MACRO( ADD_SQL_FUNCTIONAL_TESTS sql_test_path)
     MESSAGE( STATUS "Added functional tests '${test_target}'" )
 ENDMACRO()
 
-ADD_SQL_FUNCTIONAL_TESTS( schema_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/schema_test.sql )
 
-ADD_SQL_FUNCTIONAL_TESTS( register_table_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( register_table_edit_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( register_table_edit_negative_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( register_table_edit_negative_rowid_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( register_table_drop_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( detach_table_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( attach_table_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( detach_negative_unregistered_table_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( detach_negative_not_empty_shadow_table_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( detach_all_tables_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( detach_all_negative_tables_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( attach_negative_unregistered_table_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( attach_all_tables_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( attach_all_negative_tables_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( drop_registered_table_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( register_table_no_context_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( register_table_public_schema_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/register_table_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/register_table_edit_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/register_table_edit_negative_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/register_table_edit_negative_rowid_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/register_table_drop_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/detach_table_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/attach_table_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/detach_negative_unregistered_table_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/detach_negative_not_empty_shadow_table_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/detach_all_tables_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/detach_all_negative_tables_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/attach_negative_unregistered_table_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/attach_all_tables_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/attach_all_negative_tables_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/drop_registered_table_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/register_table_no_context_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/register_table_public_schema_test.sql )
 
-ADD_SQL_FUNCTIONAL_TESTS( create_context_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( context_next_block_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/create_context_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/context_next_block_test.sql )
 
-ADD_SQL_FUNCTIONAL_TESTS( trigger_on_insert_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( trigger_on_delete_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( trigger_on_update_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( trigger_on_truncate_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( trigger_on_insert_update_delete_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( trigger_on_multi_rows_insert_update_delete_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( trigger_3_tables_on_insert_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( trigger_3_tables_on_update_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( trigger_3_tables_on_delete_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( trigger_3_tables_on_truncate_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/trigger_on_insert_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/trigger_on_delete_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/trigger_on_update_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/trigger_on_truncate_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/trigger_on_insert_update_delete_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/trigger_on_multi_rows_insert_update_delete_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/trigger_3_tables_on_insert_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/trigger_3_tables_on_update_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/trigger_3_tables_on_delete_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/trigger_3_tables_on_truncate_test.sql )
 
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_insert_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_delete_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_update_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_truncate_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_insert_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_delete_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_update_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_truncate_test.sql )
 
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_insert_delete_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_insert_next_delete_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_update_delete_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_update_next_delete_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_update_some_rows_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_delete_insert_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_delete_next_insert_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_3_tables_insert_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_3_tables_delete_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_3_tables_update_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_3_tables_truncate_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_insert_delete_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_insert_next_delete_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_update_delete_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_update_next_delete_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_update_some_rows_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_delete_insert_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_delete_next_insert_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_3_tables_insert_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_3_tables_delete_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_3_tables_update_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_3_tables_truncate_test.sql )
 
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_2_tables_schemas_insert_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_2_tables_schemas_insert_test.sql )
 
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_2_contexts_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_to_block_num_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_2_contexts_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_to_block_num_test.sql )
 
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_constraint_fk_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_constraint_unique_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_constraint_fk_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_constraint_unique_test.sql )
 
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_complex_type_update_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_complex_type_insert_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( back_from_fork_complex_type_delete_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_complex_type_update_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_complex_type_insert_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/back_from_fork_complex_type_delete_test.sql )
 
-ADD_SQL_FUNCTIONAL_TESTS( set_irreversible_block_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( set_irreversible_block_negative_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/set_irreversible_block_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/set_irreversible_block_negative_test.sql )
 
-ADD_SQL_FUNCTIONAL_TESTS( performance_insert_rows_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( performance_back_from_insert_rows_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( performance_delete_rows_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( performance_back_from_delete_rows_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( performance_update_rows_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( performance_back_from_update_rows_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( performance_truncate_rows_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( performance_back_from_truncate_rows_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( performance_insert_rows_one_by_one_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( performance_delete_rows_one_by_one_test.sql )
-ADD_SQL_FUNCTIONAL_TESTS( performance_update_rows_one_by_one_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/performance_insert_rows_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/performance_back_from_insert_rows_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/performance_delete_rows_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/performance_back_from_delete_rows_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/performance_update_rows_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/performance_back_from_update_rows_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/performance_truncate_rows_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/performance_back_from_truncate_rows_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/performance_insert_rows_one_by_one_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/performance_delete_rows_one_by_one_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/performance_update_rows_one_by_one_test.sql )
