add irreversible blocks table

--- a/src/hive_fork/CMakeLists.txt
+++ b/src/hive_fork/CMakeLists.txt
@@ -8,5 +8,6 @@ ADD_PSQL_EXTENSION(
             context_rewind/irreversible.sql
             context_rewind/rewind_api.sql
             data_schema.sql
+            irreversible_blocks.sql
             hived_api.sql
 )
