add reversible and irreversible blocks tables

--- a/src/hive_fork/CMakeLists.txt
+++ b/src/hive_fork/CMakeLists.txt
@@ -9,5 +9,6 @@ ADD_PSQL_EXTENSION(
             context_rewind/rewind_api.sql
             data_schema.sql
             irreversible_blocks.sql
+            reversible_blocks.sql
             hived_api.sql
 )
