--- a/tests/integration/functional/hive_fork/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork/CMakeLists.txt
@@ -95,3 +95,5 @@ ADD_SQL_FUNCTIONAL_TESTS( hived_api/schema_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( hived_api/back_from_fork_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( hived_api/push_block_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( hived_api/set_irreversible_test.sql )
+
+ADD_SQL_FUNCTIONAL_TESTS( app_api/create_context_test.sql )
