--- a/tests/integration/functional/hive_fork/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork/CMakeLists.txt
@@ -97,3 +97,4 @@ ADD_SQL_FUNCTIONAL_TESTS( hived_api/push_block_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( hived_api/set_irreversible_test.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( app_api/create_context_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_blocks_view_test.sql )
