--- a/hivemind/tavern/tags_api_negative/get_discussions_by_blog/author_tag.tavern.yaml
+++ b/hivemind/tavern/tags_api_negative/get_discussions_by_blog/author_tag.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-  test_name: Hivemind tags_api.get_discussions_by_blog patterns test author tag
+  test_name: Hivemind
 
   marks:
     - patterntest # it used to only check permlink when looking for start post, now both author and permlink trigger page (and are required to point to valid post)
@@ -9,7 +9,7 @@
     - !include ../../common.yaml
 
   stages:
-    - name: get_discussions_by_blog
+    - name: test
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -25,6 +25,4 @@
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "author_tag"
-            directory: "tags_api_negative/get_discussions_by_blog"
             error_response: true
