test operations view

--- a/tests/integration/functional/hive_fork/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork/CMakeLists.txt
@@ -100,3 +100,4 @@ ADD_SQL_FUNCTIONAL_TESTS( app_api/create_context_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/context_blocks_view_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/context_transactions_view_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/context_signatures_view_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_operations_view_test.sql )
