--- a/hivemind/tavern/database_api_patterns/find_comments/1000_pairs.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/find_comments/1000_pairs.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-  test_name: Hivemind database_api.find_comments patterns test
+  test_name: Hivemind
 
   marks:
     - patterntest
@@ -8,7 +8,7 @@
     - !include ../../common.yaml
 
   stages:
-    - name: find_comments
+    - name: test
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -1024,5 +1024,4 @@
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "1000_pairs"
-            directory: "database_api_patterns/find_comments"
+            ignore_tags: "<database posts>"
