--- a/hivemind/tavern/database_api_patterns/find_comments/empty_list.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/find_comments/empty_list.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-test_name: Hivemind database_api.find_comments empty list of requested comments
+test_name: Hivemind
 
 marks:
   - patterntest
@@ -8,7 +8,7 @@ includes:
   - !include ../../common.yaml
 
 stages:
-  - name: database_api.find_comments unknown extra arguments
+  - name: test
     request:
       url: "{service.proto:s}://{service.server:s}:{service.port}/"
       method: POST
@@ -27,5 +27,4 @@ stages:
       verify_response_with:
         function: validate_response:compare_response_with_pattern
         extra_kwargs:
-          method: "empty_list"
-          directory: "database_api_patterns/find_comments"
+          ignore_tags: "<database posts>"
