--- a/hivemind/tavern/database_api_patterns/find_votes/many_votes.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/find_votes/many_votes.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-  test_name: Hivemind database_api.find_votes patterns test
+  test_name: Hivemind
 
   marks:
     - patterntest # more votes than hardcoded limit; fat node had a bug - lists 1001 votes
@@ -8,7 +8,7 @@
     - !include ../../common.yaml
 
   stages:
-    - name: find_votes
+    - name: test
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -27,5 +27,4 @@
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "many_votes"
-            directory: "database_api_patterns/find_votes"
+            ignore_tags: "<database votes>"
