--- a/hivemind/tavern/database_api_patterns/list_comments/by_author_last_update/all_parameters.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_comments/by_author_last_update/all_parameters.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-test_name: Hivemind database_api.list_comments patterns test order "by_author_last_update" correct author and date
+test_name: Hivemind
 
 marks:
   - patterntest # does not give different posts with start_author and start_permlink
@@ -8,7 +8,7 @@ includes:
   - !include ../../../common.yaml
 
 stages:
-  - name: list_comments_by_author_last_update
+  - name: test
     request:
       url: "{service.proto:s}://{service.server:s}:{service.port}/"
       method: POST
@@ -29,6 +29,5 @@ stages:
       verify_response_with:
         function: validate_response:compare_response_with_pattern
         extra_kwargs:
-          method: "all_parameters"
-          directory: "database_api_patterns/list_comments/by_author_last_update"
+          ignore_tags: "<database posts>"
 
