--- a/hivemind/tavern/database_api_patterns/list_comments/by_cashout_time/all_params_blank_category.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_comments/by_cashout_time/all_params_blank_category.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-test_name: Hivemind database_api.list_comments patterns test order "by_cashout_time" all data but wierd post - with blank category
+test_name: Hivemind
 
 marks:
   - patterntest # first three comments from given start_author
@@ -8,7 +8,7 @@ includes:
   - !include ../../../common.yaml
 
 stages:
-  - name: list_comments_by_cashout_time
+  - name: test
     request:
       url: "{service.proto:s}://{service.server:s}:{service.port}/"
       method: POST
@@ -29,5 +29,4 @@ stages:
       verify_response_with:
         function: validate_response:compare_response_with_pattern
         extra_kwargs:
-          method: "all_params_blank_category"
-          directory: "database_api_patterns/list_comments/by_cashout_time"
+          ignore_tags: "<database posts>"
