--- a/hivemind/tavern/database_api_patterns/list_comments/by_cashout_time/date.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_comments/by_cashout_time/date.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-test_name: Hivemind database_api.list_comments patterns test order "by_cashout_time" all data
+test_name: Hivemind
 
 marks:
   - patterntest # fat node didn't like that format of date (so original made with regular ISO format date)
@@ -9,7 +9,7 @@ includes:
   - !include ../../../common.yaml
 
 stages:
-  - name: list_comments_by_cashout_time
+  - name: test
     request:
       url: "{service.proto:s}://{service.server:s}:{service.port}/"
       method: POST
@@ -30,5 +30,4 @@ stages:
       verify_response_with:
         function: validate_response:compare_response_with_pattern
         extra_kwargs:
-          method: "date"
-          directory: "database_api_patterns/list_comments/by_cashout_time"
+          ignore_tags: "<database posts>"
