--- a/hivemind/tavern/database_api_patterns/list_comments/by_last_update/blank_category.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_comments/by_last_update/blank_category.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-test_name: Hivemind database_api.list_comments patterns test order "by_last_update" author with blank category posts
+test_name: Hivemind
 
 marks:
   - patterntest # fat node didn't limit results to replies to posts of given author
@@ -8,7 +8,7 @@ includes:
   - !include ../../../common.yaml
 
 stages:
-  - name: list_comments_by_update
+  - name: test
     request:
       url: "{service.proto:s}://{service.server:s}:{service.port}/"
       method: POST
@@ -29,6 +29,5 @@ stages:
       verify_response_with:
         function: validate_response:compare_response_with_pattern
         extra_kwargs:
-          method: "blank_category"
-          directory: "database_api_patterns/list_comments/by_last_update"
+          ignore_tags: "<database posts>"
 
