--- a/hivemind/tavern/database_api_patterns/list_comments/by_last_update/string_limit.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_comments/by_last_update/string_limit.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-test_name: Hivemind database_api.list_comments test order "by_last_update" no date
+test_name: Hivemind
 
 marks:
   - patterntest
@@ -8,7 +8,7 @@ includes:
   - !include ../../../common.yaml
 
 stages:
-  - name: list_comments no date
+  - name: test
     request:
       url: "{service.proto:s}://{service.server:s}:{service.port}/"
       method: POST
@@ -28,5 +28,4 @@ stages:
       verify_response_with:
         function: validate_response:compare_response_with_pattern
         extra_kwargs:
-          method: "string_limit"
-          directory: "database_api_patterns/list_comments/by_last_update"
+          ignore_tags: "<database posts>"
