--- a/hivemind/tavern/database_api_patterns/list_comments/by_permlink/blank_category.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_comments/by_permlink/blank_category.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-test_name: Hivemind database_api.list_comments patterns test order "by_permlink" specific post with blank category
+test_name: Hivemind
 
 marks:
   - patterntest # net_votes differ compared to fat node f.e. for @xeroc/tapin-python-based-bitshares-faucet-released (no bug was found in current implementation)
@@ -9,7 +9,7 @@ includes:
   - !include ../../../common.yaml
 
 stages:
-  - name: list_comments_by_permlink
+  - name: test
     request:
       url: "{service.proto:s}://{service.server:s}:{service.port}/"
       method: POST
@@ -30,5 +30,4 @@ stages:
       verify_response_with:
         function: validate_response:compare_response_with_pattern
         extra_kwargs:
-          method: "blank_category"
-          directory: "database_api_patterns/list_comments/by_permlink"
+          ignore_tags: "<database posts>"
