--- a/hivemind/tavern/database_api_patterns/list_comments/by_permlink/not_full_author_and_permlink.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_comments/by_permlink/not_full_author_and_permlink.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-test_name: Hivemind database_api.list_comments patterns test order "by_permlink" invalid auhtor and  permlink
+test_name: Hivemind
 
 marks:
   - patterntest # return same with just valid author ["camilla"]
@@ -8,7 +8,7 @@ includes:
   - !include ../../../common.yaml
 
 stages:
-  - name: list_comments_by_permlink
+  - name: test
     request:
       url: "{service.proto:s}://{service.server:s}:{service.port}/"
       method: POST
@@ -24,6 +24,5 @@ stages:
       verify_response_with:
         function: validate_response:compare_response_with_pattern
         extra_kwargs:
-          method: "not_full_author_and_permlink"
-          directory: "database_api_patterns/list_comments/by_permlink"
+          ignore_tags: "<database posts>"
 
