--- a/hivemind/tavern/database_api_patterns/list_comments/by_root/comment.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_comments/by_root/comment.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-test_name: Hivemind database_api.list_comments patterns test order "by_root" required values (comment of a post)
+test_name: Hivemind
 
 marks:
   - patterntest # since comment is not a root only empty result is possible (note that unlike fat node now only posts with specified root are returned)
@@ -8,7 +8,7 @@ includes:
   - !include ../../../common.yaml
 
 stages:
-  - name: list_comments_by_root
+  - name: test
     request:
       url: "{service.proto:s}://{service.server:s}:{service.port}/"
       method: POST
@@ -29,5 +29,4 @@ stages:
       verify_response_with:
         function: validate_response:compare_response_with_pattern
         extra_kwargs:
-          method: "comment"
-          directory: "database_api_patterns/list_comments/by_root"
+          ignore_tags: "<database posts>"
