--- a/hivemind/tavern/database_api_patterns/list_comments/by_root/top_post.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_comments/by_root/top_post.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-test_name: Hivemind database_api.list_comments patterns test order "by_root" required values (post)
+test_name: Hivemind
 
 marks:
   - patterntest
@@ -8,7 +8,7 @@ includes:
   - !include ../../../common.yaml
 
 stages:
-  - name: list_comments_by_root
+  - name: test
     request:
       url: "{service.proto:s}://{service.server:s}:{service.port}/"
       method: POST
@@ -29,5 +29,4 @@ stages:
       verify_response_with:
         function: validate_response:compare_response_with_pattern
         extra_kwargs:
-          method: "top_post"
-          directory: "database_api_patterns/list_comments/by_root"
+          ignore_tags: "<database posts>"
