--- a/hivemind/tavern/database_api_patterns/list_votes/by_comment_voter/no_voted_comment.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_votes/by_comment_voter/no_voted_comment.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-test_name: Hivemind database_api.list_votes patterns test order "by_comment_voter"
+test_name: Hivemind
 
 marks:
   - patterntest
@@ -8,7 +8,7 @@ includes:
   - !include ../../../common.yaml
 
 stages:
-  - name: list_votes_by_comment_voter
+  - name: test
     request:
       url: "{service.proto:s}://{service.server:s}:{service.port}/"
       method: POST
@@ -29,5 +29,4 @@ stages:
       verify_response_with:
         function: validate_response:compare_response_with_pattern
         extra_kwargs:
-          method: "no_voted_comment"
-          directory: "database_api_patterns/list_votes/by_comment_voter"
+          ignore_tags: "<database votes>"
