copy reversible blocks into inreversible

--- a/src/hive_fork/CMakeLists.txt
+++ b/src/hive_fork/CMakeLists.txt
@@ -11,6 +11,7 @@ ADD_PSQL_EXTENSION(
             irreversible_blocks.sql
             reversible_blocks.sql
             blocks_views.sql
+            move_blocks.sql
             hived_api.sql
             app_api.sql
 )
