copy reversible trx signatures to irreversible

--- a/tests/integration/functional/hive_fork/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork/CMakeLists.txt
@@ -98,6 +98,7 @@ ADD_SQL_FUNCTIONAL_TESTS( hived_api/set_irreversible_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( hived_api/copy_blocks_to_irreversible.sql )
 ADD_SQL_FUNCTIONAL_TESTS( hived_api/copy_transactions_to_irreversible_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( hived_api/copy_operations_to_irreversible_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( hived_api/copy_signatures_to_irreversible_test.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( app_api/create_context_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/context_blocks_view_test.sql )
