hive.app-next_block: process NEW_BLOCK event

--- a/tests/integration/functional/hive_fork/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork/CMakeLists.txt
@@ -108,3 +108,6 @@ ADD_SQL_FUNCTIONAL_TESTS( app_api/context_blocks_view_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/context_transactions_view_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/context_signatures_view_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/context_operations_view_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_new_block_event.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_wrong_context.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_new_block_event_2_contexts.sql )
