--- a/tests/integration/functional/hive_fork/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork/CMakeLists.txt
@@ -113,3 +113,5 @@ ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_wrong_context.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_new_block_event_2_contexts.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_BFF_event.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_BFF_event_2_contexts.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_SET_IRREVERSIBLE_event.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_SET_IRREVERSIBLE_event_2_contexts.sql )
