MASSIVE_SYNC event tested

--- a/tests/integration/functional/hive_fork/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork/CMakeLists.txt
@@ -120,3 +120,4 @@ ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_SET_IRREVERSIBLE_event_
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_attach.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_attach_negative.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_detach.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_MASSIVE_SYNC_event.sql )
