[ABW]: patterns corrected due to new mock community posts; added comment for post showing fixed problem in community muting, added new test showing unfixed reblog

--- a/hivemind/tavern/bridge_api_patterns/get_account_posts/feed/observer_alice.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_account_posts/feed/observer_alice.tavern.yaml
@@ -3,6 +3,7 @@
 
   marks:
     - patterntest # see also paginated.tavern.yaml; role of observer is not yet clear (ignored for the time being)
+                  # see issue #162 - test-safari/reblogged-and-recreated reblog should not be there
 
   includes:
     - !include ../../../common.yaml
