change table registration method
Instead of inherits from hive.base it is required to inherit from
hive.<context_name> to register a table in a given context. Previously
it was impossible to choose other context than last added, what was
problematic in multithread evironment, when few applciations create
contexts in different threads.

--- a/tests/integration/functional/hive_fork/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork/CMakeLists.txt
@@ -33,6 +33,7 @@ ADD_SQL_FUNCTIONAL_TESTS( context_rewind/attach_all_negative_tables_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( context_rewind/drop_registered_table_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( context_rewind/register_table_no_context_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( context_rewind/register_table_public_schema_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( context_rewind/register_table_to_two_contexts_negative_test.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( context_rewind/create_context_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( context_rewind/create_context_negative.sql )
@@ -131,6 +132,8 @@ ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_detach.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_MASSIVE_SYNC_event.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_non_forking_app.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_exists.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/register_already_existed_table.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/register_already_registered_table_negative.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( scenarios/massive_sync_live_blocks_and_fork.sql )
 ADD_SQL_FUNCTIONAL_TESTS( scenarios/massive_sync_live_blocks_and_fork_non_forking_app.sql )
