list_subscribers changes in tests due to majority sing change

--- a/hivemind/tavern/bridge_api_patterns/list_subscribers/hive-165317_last_abit.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/list_subscribers/hive-165317_last_abit.tavern.yaml
@@ -8,7 +8,7 @@
     - !include ../../common.yaml
 
   stages:
-    - name: test
+    - name: test # mock data subs: test-safari, good-karma, alice, camilla, (gtg, abit), agartha
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
